--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,42 +1,48 @@
 {
-    "name": "__MSG_app_name_foxyproxy_standard__",
-    "short_name": "__MSG_app_description_short_name__",
-    "version": "6.5",
-    "manifest_version": 2,
-    "description": "__MSG_app_description_foxyproxy_standard__",
-    "icons": {
-        "24": "images/48x48.svg",
-        "48": "images/48x48.svg",
-        "96": "images/48x48.svg"
-    },
-    "default_locale": "en",
-    "background": {
-        "page": "background.html"
-    },
-    "options_ui": {
-        "page": "proxies.html",
-        "open_in_tab": true,
-        "browser_style": false
-    },
-    "browser_action": {
-        "default_icon": "images/48x48.svg",
-        "default_title": "__MSG_app_description_short_name__",
-        "default_popup": "popup.html"
-    },
-    "applications": {
-      "gecko": {
-        "id": "foxyproxy@eric.h.jung",
-        "strict_min_version": "57.0"
-      }
-    },
-    "permissions": [
-        "proxy",
-        "storage",
-        "tabs",
-        "webRequest",
-        "webRequestBlocking",
-        "downloads",
-        "notifications",
-        "<all_urls>"
-    ]
+  "name": "__MSG_app_name_foxyproxy_standard__",
+  "short_name": "__MSG_app_name_foxyproxy_standard__",
+  "description": "__MSG_app_description_foxyproxy_standard__",
+  "version": "6.6.2",
+  "manifest_version": 2,
+
+  "icons": {
+    "16": "images/icon.svg",
+    "32": "images/icon.svg",
+    "48": "images/icon.svg",
+    "64": "images/icon.svg",
+    "128": "images/icon.svg"
+  },
+  "default_locale": "en",
+  "background": {
+    "scripts": ["scripts/utils.js", "scripts/const.js", 
+                "scripts/storage.js", "scripts/log-entries.js", "scripts/background.js"]
+  },
+
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true,
+    "browser_style": false
+  },
+  "browser_action": {
+    "default_icon": "images/icon.svg",
+    "default_title": "__MSG_app_name_foxyproxy_standard__",
+    "default_popup": "popup.html",
+    "browser_style": true
+  },
+  "applications": {
+    "gecko": {
+      "id": "foxyproxy@eric.h.jung",
+      "strict_min_version": "57.0"
+    }
+  },
+  "permissions": [
+    "proxy",
+    "storage",
+    "tabs",
+    "webRequest",
+    "webRequestBlocking",
+    "downloads",
+    "notifications",
+    "<all_urls>"
+  ]
 }
