Use the new proxyAPI and remove the old one

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
   },
 
   "background": {
-    "scripts": ["scripts/utils.js", "scripts/background.js"]
+    "scripts": ["scripts/utils.js", "scripts/background.js", "scripts/matcher.js"]
   },
 
   "options_ui": {
