--- a/src/manifest.json
+++ b/src/manifest.json
@@ -45,7 +45,7 @@
     "<all_urls>"
   ],
 
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "foxyproxy@eric.h.jung",
       "strict_min_version": "60.0"
