Basic 7.4.1. I'd rather make this a branch.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,7 +47,7 @@
 
   "browser_specific_settings": {
     "gecko": {
-      "id": "foxyproxy@eric.h.jung",
+      "id": "foxyproxy-basic@eric.h.jung",
       "strict_min_version": "60.0"
     }
   }
