--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
- "name": "foxyproxy",
- "description": "FoxyProxy Standard and Basic for Firefox 57+",
- "author": "Eric H. Jung",
- "version": "0.1.0",
- "private": true,
- "repository": {
-  "type": "git",
-  "url": "https://github.com/foxyproxy/firefox-extension"
- },
- "devDependencies": {
-  "grunt": "^1.0.4",
-  "grunt-contrib-compress": "^1.5.0"
- },
- "dependencies": {
-  "grunt-cli": "^1.3.2"
- }
+  "name": "foxyproxy",
+  "description": "FoxyProxy Standard and Basic for Firefox 57+",
+  "author": "Eric H. Jung",
+  "version": "0.1.0",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/foxyproxy/firefox-extension"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-contrib-compress": "^1.5.0"
+  },
+  "dependencies": {
+    "grunt-cli": "^1.3.2"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
