--- a/src/manifest.json
+++ b/src/manifest.json
@@ -45,6 +45,18 @@
     "<all_urls>"
   ],
 
+  "commands": {
+    "patterns": {
+      "description": "__MSG_modePatterns__"
+    },
+    "disabled": {
+      "description": "__MSG_modeDisabled__"
+    },
+    "forAll": {
+      "description": "__MSG_forAll__"
+    }    
+  },
+  
   "browser_specific_settings": {
     "gecko": {
       "id": "foxyproxy@eric.h.jung",
